feat: bound EEI graph exploration API
